designed auth pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16148,3 +16148,11 @@ textarea.form-control-lg {
   background: #78e4ff;
   color: #333;
 }
+
+body {
+  font-family: "Quicksand", sans-serif;
+}
+
+.bg-blue {
+  background-color: #AAB9FD;
+}
