--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,3 +25,11 @@
     background: #78e4ff;
     color: #333;
 }
+
+body {
+    font-family: 'Quicksand', sans-serif;
+}
+
+.bg-blue {
+    background-color: $my-blue;
+}
